--- a/src/app/pages/datos-generales/datos-generales.html
+++ b/src/app/pages/datos-generales/datos-generales.html
@@ -1,4 +1,6 @@
 <h1>UPSIN</h1>
 <h2>Universidad Politecnica de Sinaloa</h2>
 <p>Integrantes</p>
-<p>Ray y sus dos mayates</p>
+<p>Aguilar Osuna Angel Alfonso</p>
+<p>Estrada Magaña Raymond Samael</p>
+<p>Ramos Castro Jose Alfonso</p>
