--- a/src/app/pages/calificaciones/calificaciones.html
+++ b/src/app/pages/calificaciones/calificaciones.html
@@ -1,3 +1,7 @@
+<style>
+  td
+</style>
+
 <div style="display: flex; flex-direction: column; justify-content: center;">
     <table style="border: 1px; ">
         <th>Matricula</th>
