[ADD] todo cambiado

--- a/src/app/components/menu/menu.html
+++ b/src/app/components/menu/menu.html
@@ -1,4 +1,3 @@
-<a routerLink="/calificaciones">Calificaciones</a> -
+<a routerLink="/calificaciones">Calificaciones</a> - <br>
 <a routerLink="/datos-generales">Datos generales</a>
-<br>
 <br>
