--- a/src/app/components/calificacion/calificacion.html
+++ b/src/app/components/calificacion/calificacion.html
@@ -11,10 +11,10 @@
         <tr>
             <td> {{ registro.matricula }} </td>
             <td> {{ registro.nombre }} </td>
-            <td> {{ registro.corte1 }} </td>
-            <td> {{ registro.corte2 }} </td>
-            <td> {{ registro.corte3 }} </td>
-            <td><button>Seleccionar</button></td>
+            <td class="{{ +registro.corte1 < 7 ? 'nota-baja' : '' }}"> {{ registro.corte1 }} </td>
+            <td class="{{ +registro.corte2 < 7 ? 'nota-baja' : '' }}"> {{ registro.corte2 }} </td>
+            <td class="{{ +registro.corte3 < 7 ? 'nota-baja' : '' }}"> {{ registro.corte3 }} </td>
+            <td><button (click)="seleccionar(registro)">Seleccionar</button></td>
             <td><button (click)="delete(registro)">Eliminar</button></td>
         </tr>
         }
